syntax = "proto3";

package payment.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mohamedfawas/quboolkallyanam.xyz/api/proto/payment/v1;paymentpbv1";

service PaymentService {
    rpc CreatePaymentOrder(CreatePaymentOrderRequest) returns (CreatePaymentOrderResponse);
    rpc ShowPaymentPage(ShowPaymentPageRequest) returns (ShowPaymentPageResponse);
    rpc VerifyPayment(VerifyPaymentRequest) returns (VerifyPaymentResponse);
}

message CreatePaymentOrderRequest {
    string plan_id = 1; // e.g., "premium_365"
}

message CreatePaymentOrderResponse {
    string razorpay_order_id = 1;
    double amount = 2;
    string currency = 3;
    string plan_id = 4;
    google.protobuf.Timestamp expires_at = 5;
}

message ShowPaymentPageRequest {
    string razorpay_order_id = 1;
}

message ShowPaymentPageResponse { 
    string plan_id = 1;
    string display_amount = 2;
    int32 plan_duration_in_days = 3;
}

message VerifyPaymentRequest {
    string razorpay_order_id = 1;
    string razorpay_payment_id = 2;
    string razorpay_signature = 3;
}

message VerifyPaymentResponse {
    string subscription_id = 1;
    google.protobuf.Timestamp subscription_start_date = 2;
    google.protobuf.Timestamp subscription_end_date = 3;
    string subscription_status = 4;
}